# pb_solvers

./: .gitignore  CMakeLists.txt  DEVEL.md  Dockerfile  INSTALL.md  PBAMWrap.pdx  README  README.md  analysis_tools.html  genindex.html  index.html  intro.html  objects.inv  params.json  pbam.html  pbam.pyx  pbam_examples.html  pbam_input.html  pbam_program.html  pbsam.html  pbsam_input.html  pbsam_program.html  references.html  search.html  searchindex.js
pb_shared/unittest/: BesselCalcTest.h  BesselCalcUnitTest.h  CMakeLists.txt  ConstantsTest.h  ConstantsUnitTest.h  MyMatrixUnitTest.h  ReExpCalcTest.h  ReExpCalcUnitTest.h  SHCalcTest.h  SHCalcUnitTest.h  readutilUnitTest.h  setupUnitTest.h  utilUnitTest.h
pbam/: CMakeLists.txt  README.md  pbam.html  pbam_examples.html  pbam_input.html  pbam_method.html  pbam_program.html
pbam/gtest/Sample/: sample1_unittest.cpp
pbam/pbam/: ASolver.cpp  ASolver.h  BD.cpp  BD.h  CMakeLists.txt  Constants.cpp  Constants.h  Electrostatics.cpp  Electrostatics.h  EnergyForce.cpp  EnergyForce.h  MyMatrix.h  PBAM.cpp  PBAM.h  PBAMStruct.cpp  PBAMStruct.h  PBAMWrap.cpp  PBAMWrap.h  ReExpCalc.h  SHCalc.h  System.cpp  System.h  main.cpp  readutil.h  runPBAMWrap.c  setup.cpp  setup.h  util.h
pbam/pbam_test_code/: ASolverTest.h  ASolverUnitTest.h  BDUnitTest.h  CMakeLists.txt  ElectrostaticsUnitTest.h  EnergyForceTest.h  SHCalcTest.h  SystemUnitTest.h  TerminateUnitTest.h  ThreeBodyUnitTest.h  main.cpp
pbam/pbam_test_files/dynamics_test/: positions_2.xyz  run.dynamics.inp
pbam/pbam_test_files/dynamics_test/contact_1BRS/: 1BRS.contact  pos_1_2.xyz  qsub.dyn_1BRS  run.dynamics.inp
pbam/pbam_test_files/dynamics_test/contact_2sp/: 2sp.contact  pos_1_1.xyz  pos_1_2.xyz  pos_2_1.xyz  pos_2_2.xyz  pos_charge.pqr  run.dynamics.inp
pbam/pbam_test_files/dynamics_test/radius/: pos_2_2.xyz  pos_org.xyz  run.dynamics.inp
pbam/pbam_test_files/dynamics_test/time/: pos_1_1.xyz  pos_1_2.xyz  pos_2_1.xyz  run.dynamics.inp  single_charge.pqr
pbam/pbam_test_files/electro_barnase_test/: barnaseh.pqr  positions_A.xyz  positions_D.xyz  run.electrostatic.inp  zero.xyz
pbam/pbam_test_files/electrostatic_test/: neg_charge.pqr  pos_charge.pqr  positions_pos.xyz  run.electrostatic.inp  run.electrostatic_david.inp
pbam/pbam_test_files/energyforce_test/: energyforce2.pqr  expected_output.0M.5Angst_sep.2ptcharges  expected_output.0M.5Angst_sep.2ptcharges.pqr  pos_sing.pqr  pos_sing.xyz  positions_2.xyz  positions_neg.xyz  positions_pos.xyz  run.2sp.inp  run.energyforce.inp  run.energyforce_david.inp  single_charge.pqr
pbam/pbam_test_files/energyforce_test/barnase_barstar/: 1BRS_A.pqr  1BRS_D.pqr  positions_A.xyz  positions_D.xyz  run.energyforce.inp
pbam/pbam_test_files/gtest/: 2charge_nocen.pqr  test.face  test.pqr  test.vert  test_1BRS_cg.pqr
pbam/pbam_test_files/gtest/spol_test/: test_0.00_p3.0.10.F.exp  test_0.00_p3.0.12.F.exp  test_0.00_p3.0.14.F.exp  test_0.00_p3.0.2.F.exp  test_0.00_p3.0.3.H.exp  test_0.00_p3.0.5.F.exp  test_0.00_p3.0.5.H.exp  test_0.00_p3.0.6.F.exp
pbam/pbam_test_files/manybodyapprox_test/: bodyapprox27.pqr  positions.xyz  run.manybodyapprox.inp  single_charge.pqr
pbam/pbam_test_files/manybodyapprox_test2/: random_pos.py  read_outs.py
pbam/pbam_test_files/manybodyapprox_test2/grid_test/: bodyapprox_125_0.10.pqr  bodyapprox_16_0.10.pqr  bodyapprox_27_0.00.pqr  mol.pqr  pos125_grid.xyz  read_outs.py  run.energyforce_125_0.00.inp  run.energyforce_125_0.05.inp  run.energyforce_125_0.10.inp  run.energyforce_16_0.00.inp  run.energyforce_16_0.05.inp  run.energyforce_16_0.10.inp  run.energyforce_27_0.00.inp  run.energyforce_27_0.05.inp  run.energyforce_27_0.10.inp  run.manybodyapprox_125_0.00.inp  run.manybodyapprox_125_0.05.inp  run.manybodyapprox_125_0.10.inp  run.manybodyapprox_16_0.00.inp  run.manybodyapprox_16_0.05.inp  run.manybodyapprox_16_0.10.inp  run.manybodyapprox_27_0.00.inp  run.manybodyapprox_27_0.05.inp  (+1 more)
pbam/src/: ASolver.cpp  ASolver.cpp.diff  ASolver.h  ASolver.h.diff  BD.cpp  BD.h  BDAM.cpp  BDAM.h  CMakeLists.txt  Electrostatics.cpp  Electrostatics.h  ElectrostaticsAM.cpp  ElectrostaticsAM.h  EnergyForce.cpp  EnergyForce.h  PBAM.cpp  PBAM.h  PBAMStruct.h  PBAMWrap.cpp  PBAMWrap.h  PBAMWrap.pxd  PhysCalcAM.cpp  PhysCalcAM.h  ReExpCalc.h  System.cpp  System.h  SystemAM.cpp  SystemAM.h  main.cpp  pbam.pyx  pbam_sph.pyx  runPBAMWrap.c  setup.cpp  setup.h
pbam/unittest/: ASolverTest.h  ASolverUnitTest.h  BDUnitTest.h  CMakeLists.txt  ConstantsTest.h  ElectrostaticsUnitTest.h  EnergyForceTest.h  EnergyForceUnitTest.h  ReExpCalcTest.h  SystemUnitTest.h  TerminateUnitTest.h  ThreeBodyUnitTest.h  main.cpp  readutilUnitTest.h  tester.h  utilUnitTest.h
pbsam/: CMakeLists.txt  README.md  pbsam.html  pbsam_examples.html  pbsam_input.html  pbsam_method.html  pbsam_program.html
pbsam/pbsam/: CMakeLists.txt  Constants.cpp  Constants.h  ReExpCalc.cpp  Solver.cpp  Solver.h  System.cpp  System.h  main.cpp  readutil.h  setup.cpp  setup.h  util.h
pbsam/pbsam_test_code/: CMakeLists.txt  ConstantsUnitTest.h  SystemUnitTest.h  main.cpp  readutilUnitTest.h
pbsam/pbsam_test_files/energyforce_test/: gly_cg.pqr  run.gly.inp  zero.xyz
pbsam/pbsam_test_files/gtest/: test.cont  test.transrot  test.xyzr  test_1BRS.pqr  test_1BRS.vert  test_2sp.pqr  test_cged.pqr  test_cged_out.pqr  test_zund.pqr
pbsam/src/: BD.cpp  BD.h  BDSAM.cpp  BDSAM.h  BDsam.cpp  BDsam.h  CMakeLists.txt  Electrostatics.cpp  Electrostatics.h  ElectrostaticsSAM.cpp  ElectrostaticsSAM.h  Gradsolvmat.cpp  Gradsolvmat.h  PBSAM.cpp  PBSAM.h  PBSAMStruct.h  PhysCalc.cpp  PhysCalc.h  PhysCalcSAM.cpp  PhysCalcSAM.h  ReExpCalc.h  SHCalc.cpp  Solver.cpp  Solver.h  Solvmat.cpp  Solvmat.h  System.cpp  System.h  SystemSAM.cpp  SystemSAM.h  TMatrix.cpp  TMatrix.h  main.cpp  readutil.h  setup.cpp  setup.h
pbsam/unittest/: BDUnitTest.h  CMakeLists.txt  ElectrostaticsUnitTest.h  EnergyForceUnitTest.h  MyMatrixUnitTest.h  SHCalcUnitTest.h  SolverTest.h  SolverUnitTest.h  SystemTest.h  SystemUnitTest.h  TMatrixUnitTest.h  main.cpp  readutilUnitTest.h  tester.h
(+527 files in other folders)
